# bookings-scraper

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml  requirements.txt  run_scraper.py  test_otter_api.py  test_scraper.py  test_scraper_system.py
.github/workflows/: ci.yml
config/: notifications.yaml  trails.yaml
src/bookings_scraper/: config.py  database.py  main.py  notifications.py  notifier.py  scheduler.py
src/bookings_scraper/trails/: __init__.py  base.py  otter.py
src/bookings_scraper/utils/: __init__.py  logging.py
tests/: test_database.py
