[project]
name = "bookings-scraper"
version = "1.0.0"
description = "SANParks trail booking availability monitor with WhatsApp notifications"
authors = ["Alistair <alistair@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["sanparks", "booking", "scraper", "whatsapp", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ISC", "ICN", "G", "T10"]
ignore = ["E501", "E402", "F401", "F403"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
